--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/kumarguddu609/battleships/issues"
   },
-  "homepage": "https://github.com/kumarguddu609/battleships#readme"
+  "homepage": "https://github.com/kumarguddu609/battleships#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.7.4"
+  }
 }
