--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
